[package]
name = "swap-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", branch = "master", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", branch = "master" }
solana-program = "=1.14.18"
winnow = "=0.4.1"
